[gd_scene load_steps=7 format=2]

[ext_resource path="res://common/doors/PantryDoor/door_open.png" type="Texture" id=1]
[ext_resource path="res://common/doors/PantryDoor/door_closed.png" type="Texture" id=2]
[ext_resource path="res://common/doors/Door.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "open",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50, 50 )

[node name="PantryDoor" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "closed"
script = ExtResource( 3 )

[node name="Collision" type="StaticBody2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Collision"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="Interact" type="Area2D" parent="."]

[node name="Interact" type="CollisionShape2D" parent="Interact"]
shape = SubResource( 3 )

[connection signal="body_entered" from="Interact" to="." method="_on_player_entered"]
[connection signal="body_exited" from="Interact" to="." method="_on_player_exited"]
